--- a/src/App.css
+++ b/src/App.css
@@ -2,7 +2,12 @@
   text-align: center;
 }
 .Header {
-  color: #443e3e;
-  text-shadow: 1px 1px 5px #fff;
+  color: #d40f0f;
+  letter-spacing: 5px;
 }
+.h3 {
+  color: #d40f0f;
+}
+
+
 /* write your parent styles in here for your App.js */
