--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,14 @@
 body {
   margin: 0;
   padding: 0;
-  font-family: sans-serif;
-  background-image: url('./images/sw-bg.jpg');
-  background-size: cover;
+  background-image: url(https://starwarsblog.starwars.com/wp-content/uploads/2020/04/star-wars-backgrounds-26.jpg);
+  background-size: 100%;
+  background-repeat: no-repeat;
+  font-family: 'Megabot Five', sans-serif;
+  letter-spacing: 3px;
 }
+h3{
+  color: #d40f0f;
+  
+}
+
